# dataflow-platform

./: .env.example  .gitignore  README.md  compose.yml  pyproject.toml
docs/adr/: 001-orchestration-vs-execution.md  002-redis-streams-dispatch.md  003-lightweight-scheduler.md
src/dataflow_platform/: __init__.py
tests/: test_package.py
